--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-image: url('https://www.das-zahnaerztehaus.de/wp-content/uploads/2016/09/photo-placeholder-4.jpg'); background-repeat: no-repeat; background-attachment: fixed;
+    background-size: 100% 100%;}
